--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
-    "eslint": "^9.29.0"
+    "eslint": "^9.29.0",
+    "wrangler": "^4.21.0"
   }
 }
