--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "discord.js": "^14.20.0",
+    "discord-api-types": "^0.38.13",
+    "discord-interactions": "^4.3.0",
     "dotenv": "^16.5.0"
   },
   "devDependencies": {
