--- a/package.json
+++ b/package.json
@@ -23,20 +23,21 @@
   },
   "license": "MIT",
   "author": "Ryan Luu <ryan.luu@ryanluu.dev>",
-  "main": "app.js",
   "type": "module",
+  "main": "app.js",
   "scripts": {
     "fix": "eslint --fix",
     "lint": "eslint .",
-    "register": "node commands.js",
-    "start": "node .",
+    "register": "node src/register.js",
+    "start": "wrangler dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "discord-api-types": "^0.38.13",
     "discord-interactions": "^4.3.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "dotenv": "^16.6.0",
+    "itty-router": "^5.0.18",
+    "wrangler": "^4.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
