--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "fix": "eslint --fix",
-    "lint": "eslint .",
     "deploy": "wrangler deploy",
+    "fix": "biome check --apply .",
+    "lint": "biome check .",
     "register": "node src/register.js",
     "start": "wrangler dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -41,7 +41,6 @@
     "wrangler": "^4.22.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "eslint": "^9.29.0"
+    "@biomejs/biome": "2.0.6"
   }
 }
