--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,14 +8,11 @@ permissions:
   contents: read
 
 jobs:
-  quality:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Biome
-        uses: biomejs/setup-biome@v2
+      - uses: actions/checkout@v4
+      - uses: biomejs/setup-biome@v2
         with:
           version: latest
-      - name: Run Biome
-        run: biome ci .
+      - run: biome ci .
