--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,3 @@
 name = "disclip"
-main = "./src/server.js"
-compatibility_date="2025-06-24"
-
-# [secrets]
-# DISCORD_TOKEN
-# DISCORD_PUBLIC_KEY
-# DISCORD_APPLICATION_ID
+main = "src/server.js"
+compatibility_date="2025-06-17"
