--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,17 @@
 	"name": "disclip",
 	"main": "src/server.js",
 	"compatibility_date": "2025-06-17",
+	"compatibility_flags": ["nodejs_compat"],
+	"browser": {
+		"binding": "DISCLIPBROWSER"
+	},
+	"kv_namespaces": [
+		{
+			"binding": "BROWSER_KV_DISCLIP",
+			"id": "61f39310be9741718a42f108bfee42e8",
+			"preview_id": "988dd34eb1a1451887f9524deda522bb"
+		}
+	],
 	"observability": {
 		"enabled": true
 	}
