--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
 	"compatibility_date": "2025-06-17",
 	"compatibility_flags": ["nodejs_compat"],
 	"browser": {
-		"binding": "DISCLIPBROWSER"
+		"binding": "BROWSER"
 	},
 	"kv_namespaces": [
 		{
