Remove GitHub reporting

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,4 +15,4 @@ jobs:
       - uses: biomejs/setup-biome@v2
         with:
           version: latest
-      - run: biome ci --reporter=github
+      - run: biome ci
