Use remote bindings
Signed-off-by: GitHub <noreply@github.com>

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,8 @@
 	"compatibility_date": "2025-06-17",
 	"compatibility_flags": ["nodejs_compat"],
 	"browser": {
-		"binding": "BROWSER"
+		"binding": "BROWSER",
+		"experimental_remote": true
 	},
 	"kv_namespaces": [
 		{
