--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,6 +12,11 @@
 	},
 	"rules": [
 		{
+			"type": "Text",
+			"globs": ["**/*.css"],
+			"fallthrough": true
+		},
+		{
 			"type": "Data",
 			"globs": ["**/*.woff2"],
 			"fallthrough": true
