Enable project-level analysis
Signed-off-by: Ryan Luu <ryan.luu@ryanluu.dev>

--- a/biome.json
+++ b/biome.json
@@ -19,6 +19,9 @@
 			"complexity": {
 				"useSimplifiedLogicExpression": "error"
 			}
+		},
+		"domains": {
+			"project": "all"
 		}
 	},
 	"javascript": {
