--- a/biome.json
+++ b/biome.json
@@ -15,10 +15,7 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true,
-			"complexity": {
-				"useSimplifiedLogicExpression": "error"
-			}
+			"recommended": true
 		},
 		"domains": {
 			"project": "all"
