--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
 		"discord-api-types": "^0.38.13",
 		"discord-interactions": "^4.3.0",
 		"dotenv": "^17.0.0",
-		"itty-router": "^5.0.18",
-		"markdown-it": "^14.1.0"
+		"itty-router": "^5.0.18"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
