--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,11 +1,10 @@
 {
 	"name": "disclip",
 	"main": "src/server.js",
-	"compatibility_date": "2025-07-25",
+	"compatibility_date": "2025-09-21",
 	"compatibility_flags": ["nodejs_compat"],
 	"browser": {
-		"binding": "BROWSER",
-		"experimental_remote": true
+		"binding": "BROWSER"
 	},
 	"rules": [
 		{
