--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,7 @@
 {
 	"name": "Disclip",
 	"image": "mcr.microsoft.com/devcontainers/javascript-node:4-22-bookworm",
-	"forwardPorts": [
-		8787
-	],
+	"forwardPorts": [8787],
 	"portsAttributes": {
 		"8787": {
 			"label": "Wrangler"
@@ -12,9 +10,7 @@
 	"postCreateCommand": "npm install",
 	"customizations": {
 		"vscode": {
-			"extensions": [
-				"biomejs.biome"
-			]
+			"extensions": ["biomejs.biome"]
 		}
 	},
 	"secrets": {
