--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,19 +11,22 @@
 		"vscode": {
 			"extensions": ["biomejs.biome"]
 		}
-	},
-	"secrets": {
-		"DISCORD_APPLICATION_ID": {
-			"description": "Application ID on the General Information page of the Discord app's settings.",
-			"documentationUrl": "https://github.com/RyanLua/Disclip/blob/main/CONTRIBUTING.md#getting-app-credentials"
-		},
-		"DISCORD_PUBLIC_KEY": {
-			"description": "Public Key on the General Information page of the Discord app's settings.",
-			"documentationUrl": "https://github.com/RyanLua/Disclip/blob/main/CONTRIBUTING.md#getting-app-credentials"
-		},
-		"DISCORD_TOKEN": {
-			"description": "Token on the Bot page of the Discord app's settings.",
-			"documentationUrl": "https://github.com/RyanLua/Disclip/blob/main/CONTRIBUTING.md#getting-app-credentials"
-		}
 	}
+	// "remoteEnv": {
+	// 	"CLOUDFLARE_INCLUDE_PROCESS_ENV": "true"
+	// },
+	// "secrets": {
+	// 	"DISCORD_APPLICATION_ID": {
+	// 		"description": "Application ID on the General Information page of the Discord app's settings.",
+	// 		"documentationUrl": "https://github.com/RyanLua/Disclip/blob/main/CONTRIBUTING.md#getting-app-credentials"
+	// 	},
+	// 	"DISCORD_PUBLIC_KEY": {
+	// 		"description": "Public Key on the General Information page of the Discord app's settings.",
+	// 		"documentationUrl": "https://github.com/RyanLua/Disclip/blob/main/CONTRIBUTING.md#getting-app-credentials"
+	// 	},
+	// 	"DISCORD_TOKEN": {
+	// 		"description": "Token on the Bot page of the Discord app's settings.",
+	// 		"documentationUrl": "https://github.com/RyanLua/Disclip/blob/main/CONTRIBUTING.md#getting-app-credentials"
+	// 	}
+	// }
 }
